fixed styles and router

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,4 @@
-
+<div class="container">
 	<header class="maintitle">
 		<h2>Take a look at Africa tech ecosystem !</h2>
 	</header>
@@ -23,6 +23,7 @@
 	<footer class="contribute">
 		<a href="/login">I want to contribute !</a>
 	</footer>
+</div>
 
 
 <script type="text/javascript">
