--- a/views/organizations/index.ejs
+++ b/views/organizations/index.ejs
@@ -1,3 +1,4 @@
+<div class="container">
 <div class="titlerequest">
 	<h2>Organizations' details</h2>
 </div>
@@ -24,4 +25,5 @@
 		</ul>
 		<% }) %>
 	</ul>
+</div>
 </div>
