--- a/views/organizations/new.ejs
+++ b/views/organizations/new.ejs
@@ -1,3 +1,4 @@
+<div class="container">
 <h2 class="title">Add your organization to the map</h2>
 <h4 class="subtitle">Your organization will appear on the map after approval from administrator</h4>
 <!--  to view the error message -->
@@ -109,3 +110,4 @@
 	</div>
 
 </form>
+</div>
