--- a/views/layouts/main-layout.ejs
+++ b/views/layouts/main-layout.ejs
@@ -41,6 +41,9 @@
 
 					<div class="navbar-end">
 						<div class="navbar-item">
+							<a href="/users/profile" class="navbar-item">My profile</a>
+						</div>
+						<div class="navbar-item">
 							<a href="/organizations/new" class="navbar-item">Add new organization</a>
 						</div>
 
