Edit functionality trial

--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -29,7 +29,7 @@ Please find below your organizations :
 			<li>Status of the request: <%=organization.status%></li>
 
 
-			<form action="/<%=organization.id%>/edit/" method="POST">
+			<form action="/<%=organization.id%>/edit/" method="GET">
         <button>Edit</button>
       </form>
       <form action="/<%=organization.id%>/delete" method="POST">
