Edit functionality trial

--- a/views/organizations/edit.ejs
+++ b/views/organizations/edit.ejs
@@ -1,4 +1,4 @@
-<form action="/organizations/edit" method="POST" class="form-auth">
+<form action="/organizations/:id/edit" method="POST" class="form-auth">
 
 	<div class="field">
 		<label class="label">Organization name</label>
