fixed post delete and get edit routers

--- a/views/organizations/edit.ejs
+++ b/views/organizations/edit.ejs
@@ -1,3 +1,4 @@
+<div class="container">
 <form action="/organizations/:id/edit" method="POST" class="form-auth">
 
 	<div class="field">
@@ -101,3 +102,4 @@
 	</div>
 
 </form>
+</div>
