fixed bug with callback in map src

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,6 +30,6 @@
 	var allOrganizations = <%- JSON.stringify(organizations) %>;
 </script>
 
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAADIzhXOJbzOfhryet6qTIr9ZpMH26rq4&callback=initMap"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAADIzhXOJbzOfhryet6qTIr9ZpMH26rq4"></script>
 <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 <script type="text/javascript" src="../javascripts/main.js" ></script>
