fixed users.js org-routes.js and views and main.js

--- a/views/organizations/admin-requests.ejs
+++ b/views/organizations/admin-requests.ejs
@@ -26,11 +26,11 @@
 				<li>Status of the request: <%=organization.status%></li>
 			</ul>
 			<li>
-			<form action="/organizations/<%=organization.id%>" method="POST">
+			<form action="/organizations/<%=organization.id%>/request" method="POST">
 					<input name="status" type="hidden" value="accepted">
 					<button class="button is-success is-normal buttonrequest">Accept</button>
 				</form>
-				<form action="/organizations/<%=organization.id%>" method="POST">
+				<form action="/organizations/<%=organization.id%>/request" method="POST">
 					<input name="status" type="hidden" value="rejected">
 					<button class="button is-normal buttonrequest">Reject</button>
 			  </form>
