--- a/views/organizations/edit.ejs
+++ b/views/organizations/edit.ejs
@@ -1,10 +1,10 @@
 <div class="container">
-<form action="/organizations/:id/edit" method="POST" class="form-auth">
+<form action="/organizations/<%=organization._id%>/edit" method="POST">
 
 	<div class="field">
 		<label class="label">Organization name</label>
 		<div class="control">
-			<input type="text" name="name" placeholder="<%=organization.name%>" class="input">
+			<input type="text" name="name" value="<%=organization.name%>" class="input">
 		</div>
 
 	</div>
@@ -12,14 +12,14 @@
 	<div class="field">
 		<label class="label">Description</label>
 		<div class="control">
-			<input type="text-area" name="description" placeholder="Organization's description" class='textarea'>
+			<input type="text-area" name="description" value="<%=organization.description%>" class='textarea'>
 		</div>
 	</div>
 
 	<div class="field">
 		<lable class="label">Email</label>
 			<div class="control has-icons-left">
-				<input type="email" name="email" placeholder="email@email" class="input">
+				<input type="email" name="email" value="<%=organization.contacts.email%>" class="input">
 				<span class="icon is-small is-left">
 					<i class="fa fa-envelope"></i>
 				</span>
@@ -30,7 +30,7 @@
 	<div class="field">
 		<lable class="label">Phone</label>
 			<div class="control">
-				<input type="tel" name="phone" placeholder="Phone number" class="input">
+				<input type="tel" name="phone" value="<%=organization.contacts.phone%>" class="input">
 			</div>
 	</div>
 
@@ -39,13 +39,13 @@
 	<div class="field">
 		<lable class="label">Zip</label>
 			<div class="control">
-				<input type="text" name="zip" placeholder="Zip code" class="input">
+				<input type="text" name="zip" value="<%=organization.address.zip%>" class="input">
 			</div>
 	</div>
 	<div class="field">
 		<lable class="label">Country</label>
 		<p class="control has-icons-left">
-			<input type="text" name="country" placeholder="Country" class="input">
+			<input type="text" name="country" value="<%=organization.address.country%>" class="input">
 		<span class="icon is-small is-left">
 			 <i class="fa fa-globe"></i>
 		</span>
@@ -54,13 +54,13 @@
 	<div class="field">
 		<lable class="label">City</label>
 			<div class="control">
-				<input type="text" name="city" placeholder="City" class="input">
+				<input type="text" name="city" value="<%=organization.address.city%>" class="input">
 			</div>
 	</div>
 	<div class="field">
 		<lable class="label">Street</label>
 			<div class="control">
-				<input type="text" name="street" placeholder="Street" class="input">
+				<input type="text" name="street" value="<%=organization.address.street%>" class="input">
 			</div>
 		</div>
 	</div>
@@ -83,13 +83,13 @@
 			<div class="field">
 				<label class="label">Latitude</label>
 				<div class="control">
-					<input type="text" name="latitude" class="input">
+					<input type="text" name="latitude" class="input" value="<%=organization.location.coordinates[1]%>">
 				</div>
 			</div>
 			<div class="field">
 				<label class="label">Longitude</label>
 				<div class="control">
-					<input type="text" name="longitude" class="input">
+					<input type="text" name="longitude" class="input" value="<%=organization.location.coordinates[0]%>">
 				</div>
 			</div>
 		</div>
