--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -1,14 +1,15 @@
 <div class="container">
-	<h2> Hello + <%= user.username%> </h2>
+	<h2 class="title"> Hello, <%= user.username%> </h2>
 
 	<% if ( user.isAdmin) { %>
+	<p class="subtitle">Please, don't forget to check requests!</p>
 	<div class="navbar-item">
 		<a href="/organizations/admin-requests" class="navbar-item">Check requests</a>
 	</div>
 	<% } %>
 
 
-	<h3>Please find below your organizations :</h3>
+	<h3 class="subtitle">Your organizations:</h3>
 
 	<div class="requestdetails">
 		<ul>
