--- a/views/organizations/admin-requests.ejs
+++ b/views/organizations/admin-requests.ejs
@@ -2,8 +2,7 @@
 	<div class="titlerequest">
 		<h2>Organization's requests</h2>
 		<% if (user.isAdmin ) { %>
-		<h3>It's time to work !</h3>
-		<h4>Take a look at our contributors' requests </h4>
+		<h3>It's time to work ! Take a look at our contributors' requests:</h3>
 		<% } %>
 	</div>
 
@@ -32,7 +31,7 @@
 				</form>
 				<form action="/organizations/<%=organization.id%>/request" method="POST">
 					<input name="status" type="hidden" value="rejected">
-					<button class="button is-normal buttonrequest">Reject</button>
+					<button class="button is-danger buttonrequest">Reject</button>
 			  </form>
 			</li>
 			  <hr>
