--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,6 +1,5 @@
-
+<div class="container">
 <div class="form">
-
 	<!--  to view the error message -->
 	 <% if (errorMessage) { %>
 		<p class="error-message">
@@ -8,39 +7,39 @@
 		</p>
 	<% } %>
 
+	<form action="/login" method="POST" class="form-auth">
 
-<form action="/login" method="POST" class="form-auth">
-
-	<div class="field">
-		<p class="control has-icons-left has-icons-right">
-		<input class="input" name="email" type="email" placeholder="Email">
-		<span class="icon is-small is-left">
-			<i class="fa fa-envelope"></i>
-		</span>
-		<span class="icon is-small is-right">
-			<i class="fa fa-check"></i>
-		</span>
+		<div class="field">
+			<p class="control has-icons-left has-icons-right">
+			<input class="input" name="email" type="email" placeholder="Email">
+			<span class="icon is-small is-left">
+				<i class="fa fa-envelope"></i>
+			</span>
+			<span class="icon is-small is-right">
+				<i class="fa fa-check"></i>
+			</span>
+			</p>
+		</div>
+		<div class="field">
+		<p class="control has-icons-left">
+			<input class="input" name="password" type="password" placeholder="Password">
+			<span class="icon is-small is-left">
+				<i class="fa fa-lock"></i>
+			</span>
 		</p>
-	</div>
-<div class="field">
-<p class="control has-icons-left">
-	<input class="input" name="password" type="password" placeholder="Password">
-	<span class="icon is-small is-left">
-		<i class="fa fa-lock"></i>
-	</span>
-</p>
+		</div>
+
+
+		<div class="field">
+			<p class="control">
+				<button class="button is-success">
+					Login
+				</button>
+			</p>
+		</div>
+		<p class="account-message">
+			Don't have an account? <a href="/signup">Sign up</a>
+		</p>
+
+	</form>
 </div>
-
-
-	<div class="field">
-	<p class="control">
-		<button class="button is-success">
-			Login
-		</button>
-	</p>
-</div>
-	<p class="account-message">
-		Don't have an account? <a href="/signup">Sign up</a>
-	</p>
-
-</form>
