--- a/views/organizations/index.ejs
+++ b/views/organizations/index.ejs
@@ -6,6 +6,7 @@
 <div class="requestdetails">
 	<ul>
 		<% organizations.forEach((organization) => {%>
+		<% if (organization.status === "accepted") {%>
 		<ul>
 			<li><a href="/organizations/<%=organization.id%>">
 				Name: <%=organization.name%> </a></li>
@@ -23,6 +24,7 @@
 			</li>
 			<hr>
 		</ul>
+		<% } %>
 		<% }) %>
 	</ul>
 </div>
