--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -1,13 +1,12 @@
-<div class="container">
-	<h2 class="title"> Hello, <%= user.username%> </h2>
-
 	<% if ( user.isAdmin) { %>
-	<p class="subtitle">Please, don't forget to check requests!</p>
-	<div class="navbar-item">
-		<a href="/organizations/admin-requests" class="navbar-item">Check requests</a>
+	<div class="navbar-end">
+		<div class="navbar-item">
+			<a href="/organizations/admin-requests" class="navbar-item is-info"><p class="subtitle">Please, don't forget to check requests!</p></a>
+		</div>
 	</div>
 	<% } %>
-
+<div class="container">
+	<h2 class="title"> Hello, <%= user.username%> </h2>
 
 	<h3 class="subtitle">Your organizations:</h3>
 
