added some styles

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,5 @@
+
+
 <div class="container">
 	<header class="maintitle">
 		<h2>Take a look at Africa tech ecosystem !</h2>
@@ -24,9 +26,11 @@
 	</nav>
 
 	<div id="map"></div>
-		<footer class="contribute">
-			<a href="/login">I want to contribute !</a>
-		</footer>
+		<a href="/login">
+			<footer class="contribute">
+				Want to contribute? Use your account to add new spot on the map!
+			</footer>
+		</a>
 	</div>
 
 
