--- a/views/layouts/main-layout.ejs
+++ b/views/layouts/main-layout.ejs
@@ -25,9 +25,6 @@
 
 			<div class="navbar-menu" id="navMenu">
 				<div class="navbar-end">
-					<div class="navbar-item">
-						<a href="/organizations" class="navbar-item">View all organizations</a>
-					</div>
 					<% if (!user) { %>
 					<div class="navbar-item">
 						<a href="/login" class="navbar-item" >Login</a>
@@ -39,18 +36,21 @@
 					<% } %>
 					<% if (user) { %>
 
-						<div class="navbar-item">
-							<a href="/users/profile" class="navbar-item">
-							<span class="icon is-small"><i class="fa fa-home"></i></span>My profile</a>
-						</div>
-						<div class="navbar-item">
-							<a href="/organizations/new" class="navbar-item">Add new organization</a>
-						</div>
+					<div class="navbar-item">
+						<a href="/users/profile" class="navbar-item">
+						<span class="icon is-small"><i class="fa fa-home"></i></span>My profile</a>
+					</div>
+					<div class="navbar-item">
+						<a href="/organizations/new" class="navbar-item">Add new organization</a>
+					</div>
 
-						<div class="navbar-item">
-							<a href="/logout" class="navbar-item">Logout</a>
-						</div>
+					<div class="navbar-item">
+						<a href="/logout" class="navbar-item">Logout</a>
+					</div>
 					<% } %>
+					<div class="navbar-item">
+						<a href="/organizations" class="navbar-item">Details of all organizations </a>
+					</div>
 				</div>
 			</div>
 		</nav>
