--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -1,3 +1,5 @@
+<div class="container">
+
 
 <!--  to view the error message -->
 	 <% if (errorMessage) { %>
@@ -13,7 +15,7 @@
 			<input type="text" name="username" placeholder="Your name" class="input">
 		</div>
 	</div>
-	
+
 	<label class="label">Password</label>
 	<div class="field">
 		<p class="control has-icons-left">
@@ -23,7 +25,7 @@
 			</span>
 		</p>
 	</div>
-	
+
 	<div class="field">
 		<label class="label">Email</label>
 		<p class="control has-icons-left has-icons-right">
@@ -53,3 +55,4 @@
 		</div>
 	</div>
 </form>
+</div>
