--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,4 +1,6 @@
 
+<div class="container">
+
 <div class="form">
 
 	<!--  to view the error message -->
@@ -7,7 +9,7 @@
 			<%= errorMessage %>
 		</p>
 	<% } %>
-
+<h2 class= "logintitle"> To contribute, you just have to create an account :) </h2>
 
 <form action="/login" method="POST" class="form-auth">
 
@@ -44,3 +46,4 @@
 	</p>
 
 </form>
+</div>
