--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,10 +13,10 @@
 			</div>
 		</div>
 		<div class="control">
-			<input type="text" class="filter input is-medium" id="searchname" placeholder="Enter texthe name of the organization you're looking for">
+			<input type="text" class="filter input is-medium" id="searchname" placeholder="Enter the name of the organization you're looking for">
 		</div>
 		<div class="control">
-			<input type="text" class="filter input is-medium" id="searchcountry" placeholder="Ghana, Senegal...">
+			<input type="text" class="filter input is-medium" id="searchcountry" placeholder="Ghana, Sénégal...">
 		</div>
 		<div class="control">
 			<input type="text" class="filter input is-medium" id="searchregion" placeholder="West, East..">
