added github btn

--- a/views/layouts/main-layout.ejs
+++ b/views/layouts/main-layout.ejs
@@ -64,6 +64,12 @@
 		<footer class="footer" id="mainFooter">
 			<div class="content has-text-centered">
 			<p> &copy; Elodie Wanang &amp; Liudmyla Iefremova </p>
+			<span class="github-btn github-stargazers github-btn-large" id="#github-btn">
+				<a class="gh-btn" id="gh-btn" target="_blank" aria-label="Star on GitHub" href="https://github.com/Lalo8/DynamicMap">
+					<i class="fa fa-github" aria-hidden="true"></i>
+					<span class="gh-text" id="gh-text">Project on GitHub</span>
+				</a>
+			</span>
 			</div>
 		</footer>
 
